--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -19,13 +19,13 @@ jobs:
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.x
+          dotnet-version: 10.0.x
       - name: Install .NET WebAssembly Tools
         run: dotnet workload install wasm-tools
 
       # Publish the site
       - name: Publish
-        run: dotnet publish {YourSolution}.sln -c:Release -o:publish -p:GHPages=true
+        run: dotnet publish docs/Linq2OData.csproj -c:Release -o:publish -p:GHPages=true
 
       # Deploy the site
       - name: Deploy
