Update project file path for publishing site

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -25,7 +25,7 @@ jobs:
 
       # Publish the site
       - name: Publish
-        run: dotnet publish docs/Linq2OData.csproj -c:Release -o:publish -p:GHPages=true
+        run: dotnet publish docs/Linq2OData.Docs/Linq2OData.Docs.csproj -c:Release -o:publish -p:GHPages=true
 
       # Deploy the site
       - name: Deploy
