Started support for Odata 4

--- a/test/Linq2OData.Tests/Linq2OData.Tests.csproj
+++ b/test/Linq2OData.Tests/Linq2OData.Tests.csproj
@@ -29,6 +29,9 @@
     <None Update="SampleData\Metadata\V2\ODataDemo.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="SampleData\Metadata\V4\ODataDemo.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
