--- a/docs/Linq2OData.Docs/Linq2OData.Docs.csproj
+++ b/docs/Linq2OData.Docs/Linq2OData.Docs.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.2" PrivateAssets="all" />
-    <PackageReference Include="PublishSPAforGitHubPages.Build" Version="3.0.3" />
-    <PackageReference Include="TabBlazor" Version="0.14.59-beta" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" />
+    <PackageReference Include="PublishSPAforGitHubPages.Build" />
+    <PackageReference Include="TabBlazor" />
   </ItemGroup>
 
   <ItemGroup>
