--- a/src/Linq2OData.Generator/Linq2OData.Generator.csproj
+++ b/src/Linq2OData.Generator/Linq2OData.Generator.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -8,7 +8,7 @@
 	
 	
   <ItemGroup>
-    <PackageReference Include="System.CodeDom" Version="9.0.0" />
+    <PackageReference Include="System.CodeDom" />
   </ItemGroup>
 
   <ItemGroup>
