--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       # Checkout the code
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   
 
       # Install .NET SDK
       - name: Setup .NET SDK
