--- a/src/Linq2OData.Client/Linq2OData.Client.csproj
+++ b/src/Linq2OData.Client/Linq2OData.Client.csproj
@@ -1,11 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-  
+	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Authors>Joakim Dangården</Authors>
+		<Company>Linq2OData</Company>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/joadan/Linq2OData</RepositoryUrl>
+		<PackageProjectUrl>https://joadan.github.io/Linq2OData/</PackageProjectUrl>
+		<Title>Linq2OData.Client</Title>
+		<Description>Linq to OData client</Description>
+		<Copyright>Copyright 2026 (c) Joakim Dangården. All rights reserved.</Copyright>
+		<PackageTags>Linq OData Client</PackageTags>
+	</PropertyGroup>
 
 </Project>
