--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,9 @@ name: Create Release
 on: [ workflow_dispatch ]
 jobs:
   build:
-
+    permissions:
+      id-token: write  # enable GitHub OIDC token issuance for this job
+      
     runs-on: ubuntu-latest
 
     steps:
@@ -27,9 +29,17 @@ jobs:
         working-directory: src/Linq2OData.Client
         run: dotnet pack -c Release
 
+      # Get a short-lived NuGet API key
+      - name: NuGet login (OIDC → temp API key)
+        uses: NuGet/login@v1
+        id: login
+        with:
+          user:  ${{ secrets.NUGET_USER }} # Recommended: use a secret like ${{ secrets.NUGET_USER }} for your nuget.org username (profile name), NOT your email address
+
+
       - name: Push Linq2OData.Client
         working-directory: src/Linq2OData.Client/bin/Release
-        run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
+        run: dotnet nuget push *.nupkg --api-key ${{steps.login.outputs.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
 
       - name: Extract branch name
         shell: bash
