--- a/test/Linq2OData.Tests/Linq2OData.Tests.csproj
+++ b/test/Linq2OData.Tests/Linq2OData.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Linq2OData.Client\Linq2OData.Client.csproj" />
+    <ProjectReference Include="..\..\src\Linq2OData.Core\Linq2OData.Core.csproj" />
     <ProjectReference Include="..\..\src\Linq2OData.Generator\Linq2OData.Generator.csproj" />
   </ItemGroup>
 
