--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,6 +13,7 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="10.0.2" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageVersion Include="Microsoft.Spatial" Version="8.4.3" />
     <PackageVersion Include="PublishSPAforGitHubPages.Build" Version="3.0.3" />
     <PackageVersion Include="System.CodeDom" Version="9.0.0" />
     <PackageVersion Include="TabBlazor" Version="0.14.59-beta" />
