--- a/src/Linq2OData.Generator/Linq2OData.Generator.csproj
+++ b/src/Linq2OData.Generator/Linq2OData.Generator.csproj
@@ -1,43 +1,61 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-	
-	
-  <ItemGroup>
-    <PackageReference Include="System.CodeDom" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Templates\Client\ClientEndpointTemplate.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>ClientEndpointTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Update="Templates\Client\ClientTemplate.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>ClientTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Update="Templates\Input\InputTemplate.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>InputTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Update="Templates\Types\TypeTemplate.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>TypeTemplate.tt</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
 
+	<ItemGroup>
+		<PackageReference Include="System.CodeDom" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Update="Templates\Client\ClientEndpointTemplate.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>ClientEndpointTemplate.tt</DependentUpon>
+		</Compile>
+		<Compile Update="Templates\Client\ClientTemplate.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>ClientTemplate.tt</DependentUpon>
+		</Compile>
+		<Compile Update="Templates\Input\InputTemplate.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>InputTemplate.tt</DependentUpon>
+		</Compile>
+		<Compile Update="Templates\Types\TypeTemplate.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>TypeTemplate.tt</DependentUpon>
+		</Compile>
+	</ItemGroup>
+
+
+	<ItemGroup>
+		<None Update="Templates\Client\ClientEndpointTemplate.tt">
+			<Generator>TextTemplatingFilePreprocessor</Generator>
+			<LastGenOutput>ClientEndpointTemplate.cs</LastGenOutput>
+		</None>
+		<None Update="Templates\Client\ClientTemplate.tt">
+			<Generator>TextTemplatingFilePreprocessor</Generator>
+			<LastGenOutput>ClientTemplate.cs</LastGenOutput>
+		</None>
+		<None Update="Templates\Input\InputTemplate.tt">
+			<Generator>TextTemplatingFilePreprocessor</Generator>
+			<LastGenOutput>InputTemplate.cs</LastGenOutput>
+		</None>
+		<None Update="Templates\Types\TypeTemplate.tt">
+			<Generator>TextTemplatingFilePreprocessor</Generator>
+			<LastGenOutput>TypeTemplate.cs</LastGenOutput>
+		</None>
+	</ItemGroup>
 
 </Project>
