Move Metadata to Core

--- a/src/Linq2OData.Generator/Linq2OData.Generator.csproj
+++ b/src/Linq2OData.Generator/Linq2OData.Generator.csproj
@@ -67,4 +67,9 @@
 		</None>
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Linq2OData.Core\Linq2OData.Core.csproj" />
+	</ItemGroup>
+
 </Project>
